--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
   <head>
   <!--دوال تعمل قبل تحميل الصفحة-->
-    <script src="code/GetData.js"></script>
+    <script src="code/GetLang.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BidStory</title>
