--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- الأقسام الرئيسية -->
     <div id="home" class="section active">
-      <h2>مرحبًا بك في BidStory</h2>
+      <h2 id="1"></h2>
       <p>هنا تبدأ رحلتك مع قصص العطاءات المميزة.</p>
     </div>
 
@@ -140,5 +140,7 @@
         };
       });
     </script>
+      <!--دوال تعمل بعد تحميل الصفحة-->
+      <script src="code/GetLable.js"></script>
   </body>
 </html>
