--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ar" dir="rtl">
   <head>
   <!--دوال تعمل قبل تحميل الصفحة-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script>
+
     <script src="code/GetAllLang.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
