--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <!--دوال تعمل قبل تحميل الصفحة-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.8.0/sql-wasm.js"></script>
+  <link rel="icon" href="code/favicon.png" type="image/png">
 
     <script src="code/GetAllLang.js"></script>
     <meta charset="UTF-8" />
