--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,10 @@
-﻿
+﻿  <!-- تضمين المكتبة -->
+  <script src="js/indexedDBManager.js"></script>
+  <!-- ثم ملفات JS الخاصة بك -->
+  <script src="js/app.js"></script>
 <div>
-	<h2>قسم 2</h2>
+	<h2 id="3"></h2>
 	<p>أهلاً بك في قسم 2</p>
 </div>
+
+  
