--- a/pages/about.html
+++ b/pages/about.html
@@ -12,157 +12,130 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
 <style>
   .myTableC {
     width: 100%;
-    border-collapse: collapse;
   }
 
-  .myTable-row-1C {
-    background-color: #f2f2f2;
-  }
-  .myTable-cell-1-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-1-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-1-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-1-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-1-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-1-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-row-2C {
-    background-color: #f2f2f2;
-  }
-  .myTable-cell-2-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-2-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-2-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-2-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-2-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-2-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-row-3C {
-    background-color: #f2f2f2;
-  }
-  .myTable-cell-3-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-3-1C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-3-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-3-2C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-cell-3-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
-  .myTable-item-3-3C {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-  }
+  .myTable-row-1C {}
+
+  .myTable-cell-1-1C {}
+
+  .myTable-item-1-1C {}
+
+  .myTable-cell-1-2C {}
+
+  .myTable-item-1-2C {}
+
+  .myTable-cell-1-3C {}
+
+  .myTable-item-1-3C {}
+
+  .myTable-row-2C {}
+
+  .myTable-cell-2-1C {}
+
+  .myTable-item-2-1C {}
+
+  .myTable-cell-2-2C {}
+
+  .myTable-item-2-2C {}
+
+  .myTable-cell-2-3C {}
+
+  .myTable-item-2-3C {}
+
+  .myTable-row-3C {}
+
+  .myTable-cell-3-1C {}
+
+  .myTable-item-3-1C {}
+
+  .myTable-cell-3-2C {}
+
+  .myTable-item-3-2C {}
+
+  .myTable-cell-3-3C {}
+
+  .myTable-item-3-3C {}
 </style>
 
-<table id="myTable" >
-  <tr id="myTable-row-1" class="myTable-row-1C" >
-    <td id="myTable-cell-1-1" class="myTable-cell-1-1C" ><span id="myTable-element-1-1" class="myTable-element-1-1C"></span></td>
-    <td id="myTable-cell-1-2" class="myTable-cell-1-2C" ><img src="" id="myTable-element-1-2" class="myTable-element-1-2C" alt="" width="" height=""></td>
-    <td id="myTable-cell-1-3" class="myTable-cell-1-3C" ></td>
+<table id="myTable">
+  <tr id="myTable-row-1" class="myTable-row-1C">
+    <td id="myTable-cell-1-1" class="myTable-cell-1-1C">
+      <a href="" id="myTable-element-1-1" class="myTable-element-1-1C" target="_self"></a>
+    </td>
+    <td id="myTable-cell-1-2" class="myTable-cell-1-2C">
+      <input type="text" id="myTable-element-1-2" class="myTable-element-1-2C" name="" placeholder="" value="">
+    </td>
+    <td id="myTable-cell-1-3" class="myTable-cell-1-3C">
+
+    </td>
   </tr>
-  <tr id="myTable-row-2" class="myTable-row-2C" >
-    <td id="myTable-cell-2-1" class="myTable-cell-2-1C" ></td>
-    <td id="myTable-cell-2-2" class="myTable-cell-2-2C" ></td>
-    <td id="myTable-cell-2-3" class="myTable-cell-2-3C" ></td>
+  <tr id="myTable-row-2" class="myTable-row-2C">
+    <td id="myTable-cell-2-1" class="myTable-cell-2-1C">
+
+    </td>
+    <td id="myTable-cell-2-2" class="myTable-cell-2-2C">
+
+    </td>
+    <td id="myTable-cell-2-3" class="myTable-cell-2-3C">
+
+    </td>
   </tr>
-  <tr id="myTable-row-3" class="myTable-row-3C" >
-    <td id="myTable-cell-3-1" class="myTable-cell-3-1C" ></td>
-    <td id="myTable-cell-3-2" class="myTable-cell-3-2C" ></td>
-    <td id="myTable-cell-3-3" class="myTable-cell-3-3C" ></td>
+  <tr id="myTable-row-3" class="myTable-row-3C">
+    <td id="myTable-cell-3-1" class="myTable-cell-3-1C">
+
+    </td>
+    <td id="myTable-cell-3-2" class="myTable-cell-3-2C">
+
+    </td>
+    <td id="myTable-cell-3-3" class="myTable-cell-3-3C">
+
+    </td>
   </tr>
 </table>
 
-   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-const myTable = document.getElementById('myTable');
-const myTable_row_1 = document.getElementById('myTable-row-1');
-const myTable_cell_1_1 = document.getElementById('myTable-cell-1-1');
-const myTable_item_1_1 = document.getElementById('myTable-item-1-1');
-const myTable_cell_1_2 = document.getElementById('myTable-cell-1-2');
-const myTable_item_1_2 = document.getElementById('myTable-item-1-2');
-const myTable_cell_1_3 = document.getElementById('myTable-cell-1-3');
-const myTable_item_1_3 = document.getElementById('myTable-item-1-3');
-const myTable_row_2 = document.getElementById('myTable-row-2');
-const myTable_cell_2_1 = document.getElementById('myTable-cell-2-1');
-const myTable_item_2_1 = document.getElementById('myTable-item-2-1');
-const myTable_cell_2_2 = document.getElementById('myTable-cell-2-2');
-const myTable_item_2_2 = document.getElementById('myTable-item-2-2');
-const myTable_cell_2_3 = document.getElementById('myTable-cell-2-3');
-const myTable_item_2_3 = document.getElementById('myTable-item-2-3');
-const myTable_row_3 = document.getElementById('myTable-row-3');
-const myTable_cell_3_1 = document.getElementById('myTable-cell-3-1');
-const myTable_item_3_1 = document.getElementById('myTable-item-3-1');
-const myTable_cell_3_2 = document.getElementById('myTable-cell-3-2');
-const myTable_item_3_2 = document.getElementById('myTable-item-3-2');
-const myTable_cell_3_3 = document.getElementById('myTable-cell-3-3');
-const myTable_item_3_3 = document.getElementById('myTable-item-3-3');
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const myTable = document.getElementById('myTable');
+    const myTable_row_1 = document.getElementById('myTable-row-1');
+    const myTable_cell_1_1 = document.getElementById('myTable-cell-1-1');
+    const myTable_item_1_1 = document.getElementById('myTable-element-1-1');
+    const myTable_cell_1_2 = document.getElementById('myTable-cell-1-2');
+    const input1 = document.getElementById('myTable-element-1-2');
+    const myTable_cell_1_3 = document.getElementById('myTable-cell-1-3');
+    const myTable_item_1_3 = document.getElementById('myTable-element-1-3');
+    const myTable_row_2 = document.getElementById('myTable-row-2');
+    const myTable_cell_2_1 = document.getElementById('myTable-cell-2-1');
+    const myTable_item_2_1 = document.getElementById('myTable-element-2-1');
+    const myTable_cell_2_2 = document.getElementById('myTable-cell-2-2');
+    const myTable_item_2_2 = document.getElementById('myTable-element-2-2');
+    const myTable_cell_2_3 = document.getElementById('myTable-cell-2-3');
+    const myTable_item_2_3 = document.getElementById('myTable-element-2-3');
+    const myTable_row_3 = document.getElementById('myTable-row-3');
+    const myTable_cell_3_1 = document.getElementById('myTable-cell-3-1');
+    const myTable_item_3_1 = document.getElementById('myTable-element-3-1');
+    const myTable_cell_3_2 = document.getElementById('myTable-cell-3-2');
+    const myTable_item_3_2 = document.getElementById('myTable-element-3-2');
+    const myTable_cell_3_3 = document.getElementById('myTable-cell-3-3');
+    const myTable_item_3_3 = document.getElementById('myTable-element-3-3');
+    input1.addEventListener("input", function () {
+     alert("Input changed in myTable-item-1-2: " + input1.value);
     });
+    myTable_item_1_3.addEventListener("input", function () {
+     alert("Input changed in myTable-item-1-3: " + myTable_item_1_3.value);
+    });
+  });
 </script>
-
-
-
