--- a/pages/table/all.html
+++ b/pages/table/all.html
@@ -16,7 +16,7 @@
 
 <div id="inCell">
     <input class="inputT" type="text" placeholder="  ادخال من داخل الدف">
-    <textarea class="textareaT" type="text" placeholder="  ادخال من داخل الدف"></textarea>
+    <input class="textareaT" type="text" placeholder="  ادخال من داخل الدف"></input>
     <input type="checkbox" class="inputT">
     <input type="radio" class="inputT">
 </div>
