--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -1,6 +1,6 @@
-<script src="/js/tools.js" type="text/javascript"></script>
-<script src="/js/dataBase/dbManager.js" type="text/javascript"></script>
-<script src="/js/table/table.js" type="text/javascript"></script>
+<script src="/js/tools.js" ></script>
+<script src="/js/dataBase/dbManager.js" ></script>
+<script src="/js/table/table.js"></script>
 <link rel="stylesheet" href="/css/table.css">
 
 <div id="table1"></div> <!-- مكان إضافة الجدول -->
