--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -1,4 +1,4 @@
-<script src="js/tools.js" ></script>
+<script src="./js/tools.js" ></script>
 <script src="js/dataBase/dbManager.js" ></script>
 <script src="js/table/table.js"></script>
 <link rel="stylesheet" href="css/table.css">
