--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -1,7 +1,7 @@
 <script src="/BidStory/js/tools.js" ></script>
-<script src="/js/dataBase/dbManager.js" ></script>
-<script src="/js/table/table.js"></script>
-<link rel="stylesheet" href="/css/table.css">
+<script src="/BidStory/js/dataBase/dbManager.js" ></script>
+<script src="/BidStory/js/table/table.js"></script>
+<link rel="stylesheet" href="/BidStory/css/table.css">
 
 <div id="table1"></div> <!-- مكان إضافة الجدول -->
 
