--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -1,4 +1,4 @@
-<script src="/BidStory/js/tools.js" ></script>
+<script src="js/tools.js" ></script>
 <script src="/BidStory/js/dataBase/dbManager.js" ></script>
 <script src="/BidStory/js/table/table.js"></script>
 <link rel="stylesheet" href="/BidStory/css/table.css">
