--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -8,7 +8,7 @@
 <div id="table1"></div> <!-- مكان إضافة الجدول -->
 
 <button onclick="createNewRow()">إضافة صف</button>
-<button onclick="deleteSelectedRow()">حزف صف</button>
+<button onclick="deleteSelectedRow()">حذف صف</button>
 <button onclick="moveRow()">تحريك لاعلي</button>
 <button onclick="moveRow(false)">تحريك لاسفل</button>
 <button onclick="inserNewRow()">صف جديد لاعلي </button>
