--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -13,7 +13,10 @@
 <button onclick="moveRow(false)">تحريك لاسفل</button>
 <button onclick="inserNewRow()">صف جديد لاعلي </button>
 <button onclick="inserNewRow(false)">صف جديد لاسفل </button>
+<button onclick="copyRow()">  نسخ صف </button>
 
+<button onclick="pastNewRow()">  لصق صف لاعلي </button>
+<button onclick="pastNewRow(false)">  لصق صف لاسفل </button>
 <!-- لا يمكن تغير معرف هذا الدف يجب ان يكون  -->
 <!-- <div id="inRaw"> -->
 <!--  لان عمليات النسخ تتم علية    -->
