--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -51,7 +51,7 @@
           </select>
         </td>
         <td>
-<button id="i5">buttom</button>   
+<button id="i5" class="buttonT">buttom</button>   
      </td>
       </tr>
  
