--- a/pages/table/table.html
+++ b/pages/table/table.html
@@ -8,13 +8,16 @@
 
 <button onclick="createNewRow()">إضافة صف</button>
 
-
-<div DivId id="RawTable" style="display: none;" class="divT">
+<div DivId id="RawTable" style="display: none;" class="">
   <table>
-    <thead>
+    <thead class="hide-text">
       <tr>
         <th>العمود 1</th>
         <th>العمود 2</th>
+        <th>العمود 3</th>
+        <th>العمود 4</th>
+        <th>العمود 5</th>
+        <th>العمود 6</th>
       </tr>
     </thead>
     <tbody>
