--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <script src="/BidStory/js/tools.js"></script>
   <script src="/BidStory/code/lang/imageAndLang.js"></script>
   <script>
-   
+    async function delay ( ms )
+{
+  return new Promise( resolve => setTimeout( resolve, ms ) );
+}
     // ✅ تحديد اللغة والاتجاه قبل تحميل أي شيء آخر
-    (async function () {
-     await delay(3000);
+    (function () {
+      delay(3000);
       const savedLang = JSON.parse(localStorage.getItem("languageSelect")) || "ar";
       const html = document.documentElement;
 
