--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <script src="/BidStory/js/tools.js"></script>
   <script src="/BidStory/code/lang/imageAndLang.js"></script>
   <script>
-    async function delay ( ms )
-{
-  return new Promise( resolve => setTimeout( resolve, ms ) );
-}
+ 
     // ✅ تحديد اللغة والاتجاه قبل تحميل أي شيء آخر
-    (function () {
-      delay(3000);
+    (async function () {
+     // انتظر حتى تصبح البيانات جاهزة إن كنت تعتمد على متغير مثل Load
+    while (typeof Load !== "undefined" && Load === false) {
+      await new Promise(resolve => setTimeout(resolve, 100));
+    }
       const savedLang = JSON.parse(localStorage.getItem("languageSelect")) || "ar";
       const html = document.documentElement;
 
